bug fix: 24 char password not visible

--- a/GUI_passwordGen/style.css
+++ b/GUI_passwordGen/style.css
@@ -49,6 +49,9 @@ body {
     border: 0;
     outline: 0;
     font-size: 24px;
+    width: 100%; 
+    padding: 10px;
+    border-radius: 4px;
 }
 
 .container button img{
